--- a/reviewmate/src/taskpane/taskpane.html
+++ b/reviewmate/src/taskpane/taskpane.html
@@ -2,13 +2,13 @@
 <!-- This file shows how to design a first-run page that provides a welcome screen to the user about the features of the add-in. -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contoso Task Pane Add-in</title>
+    <title>ReviewMate</title>
 
     <!-- Office JavaScript API -->
     <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
@@ -22,33 +22,61 @@
 
 <body class="ms-font-m ms-welcome ms-Fabric">
     <header class="ms-welcome__header ms-bgColor-neutralLighter">
-        <img width="90" height="90" src="../../assets/logo-filled.png" alt="Contoso" title="Contoso" />
-        <h1 class="ms-font-su">Welcome</h1>
+        <img width="90" height="90" src="../../assets/logo-filled.png" alt="ReviewMate" title="ReviewMate" />
+        <h1 class="ms-font-su">ReviewMate</h1>
+        <p class="ms-font-m">AI-powered peer review inside Word</p>
     </header>
     <section id="sideload-msg" class="ms-welcome__main">
-        <h2 class="ms-font-xl">Please <a target="_blank" href="https://learn.microsoft.com/office/dev/add-ins/testing/test-debug-office-add-ins#sideload-an-office-add-in-for-testing">sideload</a> your add-in to see app body.</h2>
+        <h2 class="ms-font-xl">Please <a target="_blank" rel="noopener noreferrer" href="https://learn.microsoft.com/office/dev/add-ins/testing/test-debug-office-add-ins#sideload-an-office-add-in-for-testing">sideload</a> your add-in to see app body.</h2>
     </section>
-    <main id="app-body" class="ms-welcome__main" style="display: none;">
-        <h2 class="ms-font-xl"> Discover what Office Add-ins can do for you today! </h2>
-        <ul class="ms-List ms-welcome__features">
-            <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Ribbon ms-font-xl"></i>
-                <span class="ms-font-m">Achieve more with Office integration</span>
-            </li>
-            <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Unlock ms-font-xl"></i>
-                <span class="ms-font-m">Unlock features and functionality</span>
-            </li>
-            <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Design ms-font-xl"></i>
-                <span class="ms-font-m">Create and visualize like a pro</span>
-            </li>
-        </ul>
-        <p class="ms-font-l">Modify the source files, then click <b>Run</b>.</p>
-        <div role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
-            <span class="ms-Button-label">Run</span>
-        </div>
-        <p><label id="item-subject"></label></p>
+    <main id="app-body" class="ms-welcome__main app-hidden">
+        <section class="section">
+            <h2 class="ms-font-xl">Settings</h2>
+            <div class="row gap-sm wrap">
+                <label class="flex-1 min-220">
+                    <div class="ms-font-s">API Base URL</div>
+                    <input id="api-base" class="ms-TextField-field" type="text" value="https://api.openai.com/v1" />
+                </label>
+                <label class="flex-1 min-220">
+                    <div class="ms-font-s">Model</div>
+                    <input id="api-model" class="ms-TextField-field" type="text" value="gpt-4o-mini" />
+                </label>
+                <label class="flex-1 min-220">
+                    <div class="ms-font-s">API Key</div>
+                    <input id="api-key" class="ms-TextField-field" type="password" placeholder="sk-..." />
+                </label>
+                <div>
+                    <button id="btn-save-settings" class="ms-Button"><span class="ms-Button-label">Save</span></button>
+                </div>
+            </div>
+            <p class="ms-font-xs">Your settings are stored locally (Office storage/session) and not sent anywhere except the LLM provider you choose.</p>
+        </section>
+
+        <section class="section mt-md">
+            <h2 class="ms-font-xl">Review focus</h2>
+            <div class="row gap-md wrap">
+                <label><input type="checkbox" class="focus" value="grammar" checked/> Grammar</label>
+                <label><input type="checkbox" class="focus" value="clarity" checked/> Clarity</label>
+                <label><input type="checkbox" class="focus" value="structure" /> Structure</label>
+                <label><input type="checkbox" class="focus" value="argument strength" /> Argument strength</label>
+                <label><input type="checkbox" class="focus" value="citation check" /> Citation check</label>
+            </div>
+            <div class="mt-sm">
+                <div class="ms-font-s">Additional instructions (optional)</div>
+                <textarea id="custom-instructions" class="ms-TextField-field w-100" rows="3" title="Additional instructions"></textarea>
+            </div>
+        </section>
+
+        <section class="section mt-md">
+            <h2 class="ms-font-xl">Actions</h2>
+            <div class="row gap-sm wrap">
+                <button id="btn-review-selection" class="ms-Button ms-Button--hero"><span class="ms-Button-label">Review selection</span></button>
+                <button id="btn-review-document" class="ms-Button ms-Button--hero"><span class="ms-Button-label">Review document</span></button>
+                <button id="btn-review-again" class="ms-Button"><span class="ms-Button-label">Review again</span></button>
+                <button id="btn-generate-summary" class="ms-Button"><span class="ms-Button-label">Insert summary report</span></button>
+            </div>
+            <div id="status" class="ms-font-s status"></div>
+        </section>
     </main>
 </body>
 
