implement paraphrase and text trimming

--- a/reviewmate/src/taskpane/taskpane.html
+++ b/reviewmate/src/taskpane/taskpane.html
@@ -118,6 +118,8 @@
                     <button id="btn-review-document" class="ms-Button action-btn btn-outline"><span class="ms-Button-label">Review document</span></button>
                     <button id="btn-review-again" class="ms-Button action-btn btn-outline"><span class="ms-Button-label">Review again</span></button>
                     <button id="btn-generate-summary" class="ms-Button action-btn btn-outline"><span class="ms-Button-label">Insert summary report</span></button>
+                    <button id="btn-trim-selection" class="ms-Button action-btn btn-outline"><span class="ms-Button-label">Trim selection</span></button>
+                    <button id="btn-paraphrase-selection" class="ms-Button action-btn btn-outline"><span class="ms-Button-label">Paraphrase selection</span></button>
                 </div>
                 <div class="field statusrow">
                     <div class="spinner" id="spinner" aria-hidden="true"></div>
